# static/openapi.json
@@ -1,7 +1,7 @@
 {
 	"openapi": "3.1.1",
 	"info": {
-		"title": "API Авторизация и пользователи",
+		"title": "API Авторизация. Пользователи. Файлы.",
 		"version": "1.0",
 		"contact": {
 			"email": "unite-tech@yandex.ru"
@@ -20,6 +20,14 @@
 		{
 			"name": "user",
 			"description": "Работа с пользователями"
+		},
+		{
+			"name": "role",
+			"description": "Работа с ролями пользователей"
+		},
+		{
+			"name": "file",
+			"description": "Работа с ролями пользователей"
 		}
 	],
 	"paths": {
@@ -306,7 +314,7 @@
 						"in": "query",
 						"name": "limit",
 						"required": false,
-						"description": "Количество пользователей",
+						"description": "Количество",
 						"schema": {
 							"type": "integer"
 						}
@@ -329,7 +337,7 @@
 								"schema": {
 									"type":"object",
 									"properties": {
-										"users": {
+										"list": {
 											"type":"array",
 											"items": {
 												"$ref": "#/components/schemas/User"
@@ -356,8 +364,424 @@
 					}
 				}
 			}
+		},
+		"/api/role": {
+			"post": {
+				"tags": [
+					"role"
+				],
+				"summary": "Создать роль",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RoleData"
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Role"
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/role/{id}": {
+			"get": {
+				"tags": [
+					"role"
+				],
+				"summary": "Получить роль",
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"description": "Идентификатор",
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Role"
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			},
+			"put": {
+				"tags": [
+					"role"
+				],
+				"summary": "Обновить роль",
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"description": "Идентификатор",
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RoleData"
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Role"
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"tags": [
+					"role"
+				],
+				"summary": "Удалить роль",
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"description": "Идентификатор",
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Role"
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/role/all": {
+			"get": {
+				"tags": [
+					"role"
+				],
+				"summary": "Получить роли",
+				"parameters": [
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"description": "Количество",
+						"schema": {
+							"type": "integer"
+						}
+					},
+					{
+						"in": "query",
+						"name": "offset",
+						"required": false,
+						"description": "Отступ",
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"list": {
+											"type": "array",
+											"items": {
+												"$ref": "#/components/schemas/Role"
+											}
+										},
+										"count": {
+											"type": "integer",
+											"example": "0"
+										}
+									}
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/file": {
+			"post": {
+				"tags": [
+					"file"
+				],
+				"summary": "Загрузить файл",
+				"requestBody": {
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type":"object",
+								"required": ["file"],
+								"properties": {
+									"file": {
+										"type": "string",
+										"format": "binary"
+									}
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/File"
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/file/{id}": {
+			"get": {
+				"tags": [
+					"file"
+				],
+				"summary": "Получить файл",
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"description": "Идентификатор",
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/File"
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"tags": [
+					"file"
+				],
+				"summary": "Удалить файл",
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"description": "Идентификатор",
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/File"
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/file/all": {
+			"get": {
+				"tags": [
+					"file"
+				],
+				"summary": "Получить файлы",
+				"parameters": [
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"description": "Количество",
+						"schema": {
+							"type": "integer"
+						}
+					},
+					{
+						"in": "query",
+						"name": "offset",
+						"required": false,
+						"description": "Отступ",
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"list": {
+											"type": "array",
+											"items": {
+												"$ref": "#/components/schemas/File"
+											}
+										},
+										"count": {
+											"type": "integer",
+											"example": "0"
+										}
+									}
+								}
+							}
+						}
+					},
+					"default": {
+						"description": "Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorData"
+								}
+							}
+						}
+					}
+				}
+			}
 		}
-
 	},
 	"components": {
 		"schemas": {
@@ -458,20 +882,90 @@
 					"phone": {
 						"type": "string",
 						"example": "+71232211"
+					},
+					"roleId": {
+						"type":"integer",
+						"example": 1
 					}
 				}
 			},
 			"User": {
 				"type": "object",
-				"required": ["email"],
 				"allOf": [
-					{"$ref": "#/components/schemas/GeneralData"},
+					{
+						"$ref": "#/components/schemas/GeneralData"
+					},
 					{
 						"$ref": "#/components/schemas/UserData"
 					}
+				],
+				"properties": {
+					"role": {
+						"$ref": "#/components/schemas/Role"
+					}
+				}
+			},
+			"RoleData": {
+				"type": "object",
+				"required": [
+					"name"
+				],
+				"properties": {
+					"name": {
+						"type": "string",
+						"example": "Administrator"
+					}
+				}
+			},
+			"Role": {
+				"type":"object",
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/GeneralData"
+					},
+					{
+						"$ref": "#/components/schemas/RoleData"
+					}
+				]
 
-				]			
-			}			
+			},
+			"FileData": {
+				"type":"object",
+				"required": ["name", "hash", ""],
+				"properties": {
+					"name": {
+						"type": "string",
+						"example": "file_name"
+					},
+					"extansion": {
+						"type": "string",
+						"example": "png"
+					},
+					"hash": {
+						"type": "string",
+						"example": "hash_string"
+					},
+					"link": {
+						"type": "string",
+						"example": "/files/hash_string.png"
+					},
+					"userId": {
+						"type": "integer",
+						"example": "1"
+					}											
+				}
+			},
+			"File": {
+				"type": "object",
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/GeneralData"
+					},
+					{
+						"$ref": "#/components/schemas/FileData"
+					}
+				]
+			}
 		},
 		"securitySchemes": {
 			"bearerAuth": {
